--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "build": "remix build",
     "dev": "remix dev",
     "start": "remix-serve build",
-    "api": "npx json-server --watch db.json --port 9000"
+    "api": "npx json-server --watch db.json --port 9000",
+    "api:delay": "npx json-server --watch db.json --port 9000 --delay 800"
   },
   "dependencies": {
     "@remix-run/node": "^1.11.1",
@@ -16,7 +17,8 @@
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix-validated-form": "^4.6.7"
+    "remix-validated-form": "^4.6.7",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.11.1",
